# smart-journal

./: .gitignore  2025-July-13.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs
src/commands/: help.rs  journal.rs  mod.rs
src/config/: mod.rs
src/ui/: components.rs  mod.rs  screens.rs
src/utils/: io.rs
