[package]
name = "rusty_diary"
version = "0.1.0"
edition = "2021"
authors = ["Rusty Diary Contributors"]
description = "A beautiful, terminal-based journal application with TUI interface and LLM integration"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/rusty_diary"
repository = "https://github.com/yourusername/rusty_diary"
documentation = "https://docs.rs/rusty_diary"
keywords = ["journal", "diary", "tui", "terminal", "llm"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "test_journal_*.md",
    "journal_test_*.md",
    "*.journal",
    ".github/",
    "screenshots/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
colored = "3.0.0"
time = "0.3.41"
ratatui = "0.29.0"
crossterm = "0.28.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
